# Prueba-Tecnica-Juan-Ignacio-Cabral

./: .env.example  .gitignore  ARQUITECTURA.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
app/: config.py
app/application/: ingest.py  retrieve.py
app/domain/: models.py  ports.py
app/infrastructure/dedup/: pandas_dedup.py
app/infrastructure/embedder/: e5.py
app/infrastructure/parsers/: json.py  md.py  pdf.py  txt.py
app/infrastructure/vector_store/: chroma.py
app/interface/: api.py  schemas.py
app/static/: index.html
n8n_workflows/: RAG Support Assistant.json  rag_support_workflow.json
tests/eval/: cases.py  run_eval.py
tests/unit/: test_api.py  test_dedup.py  test_embedder.py  test_error_handling.py  test_eval_cases.py  test_models.py  test_parsers.py  test_ports.py  test_use_cases.py  test_vector_store.py
